--- a/Views/Instrutores/Index.cshtml
+++ b/Views/Instrutores/Index.cshtml
@@ -30,7 +30,7 @@
     <table class="table">
         <thead>
             <tr>
-                <th scope="col">#</th>
+                <th scope="col">#ID</th>
                 <th scope="col">Nome</th>
                 <th scope="col">E-mail</th>
                 <th scope="col">Instagram</th>
@@ -49,7 +49,7 @@
                         <td>
                             <div class="btn-group" role="group">
                                 <a role="button" class="btn btn-primary" asp-route-id="@instrutor.ID" asp-controller="Instrutores" asp-action="Editar">Editar</a>
-                                <a role="button" class="btn btn-danger" asp-route-id="@instrutor.ID" asp-controller="Instrutores" asp-action="ExcluirConfirmacao">Excluir</a>
+                                <a role="button" class="btn btn-danger" asp-route-id="@instrutor.ID" asp-controller="Instrutores" asp-action="ConfirmacaoExclusao">Excluir</a>
                             </div>
                         </td>
                     </tr>
