Feito modulo de inscrito (mesmas funções do modulo de instrutores).;feito ajuste na mensagem de erro do validador da model.;corrigido bug na alteração dos registros referente ao email.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Inscritos">Inscritos</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Inscritos" asp-action="Index">Inscritos</a>
                         </li>
 
                         <li class="nav-item">
